src/objects/NOFA__c.object
<CustomObject>
    <fields>
        <fullName>Site_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box on NOFA for Location Information section on NOFA &amp; Application. KY</description>
        <label>Site Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Type_and_Summer_Associates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box on NOFA for Location Information section on NOFA &amp; Application. KY</description>
        <label>Site Type and Summer Associates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_424__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Standard 424</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_CP__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_Information__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check box on NOFA for Location Information section on NOFA &amp; Application.</description>
        <label>Standard Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Commission_Input_Application__c</fullName>
        <label>State Commission Input – Application</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_Commission_Input_Concept_Paper__c</fullName>
        <label>State Commission Input – Concept Paper</label>
        <picklist>
            <controllingField>Allow_Concept_Paper__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>CT</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USVI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>NOFO Status</label>
        <picklist>
            <picklistValues>
                <fullName>Setup in Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Review in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned for Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finalized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strengthening_Communities_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Strengthening Communities </label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Strengthening_Communities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Strengthening Communities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Applicant_Concept_Paper_Due_Date__c</fullName>
        <inlineHelpText>Only enter the date if the concept paper is required.</inlineHelpText>
        <label>Sub-Applicant Concept Paper Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Application_Count__c</fullName>
        <label>Sub-Application Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Application_Due_Date__c</fullName>
        <inlineHelpText>This due date applies to sub-applicants.</inlineHelpText>
        <label>Sub-Application Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Budgets_for_Multi_Year_Grants__c</fullName>
        <label>Sub-Budgets for Multi-Year Grants</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_On__c</fullName>
        <label>Submitted On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Summary_of_Accomplishments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Summary of Accomplishments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Populations_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field determines which field should show up on the Concept Paper.</description>
        <label>Target Populations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Populations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Target Populations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terms_of_acceptance__c</fullName>
        <label>Terms of Acceptance</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Test_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timely_Submission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Timely Submission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tools_and_Equipment_AP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Application setup on NOFA.</description>
        <label>Tools and Equipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tools_and_Equipment_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Concept Paper setup on NOFA.</description>
        <label>Tools and Equipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_Organization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Type of Organization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>USA_Spending_Site__c</fullName>
        <label>USA Spending Site</label>
        <length>149</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upper_Threshold__c</fullName>
        <label>Upper Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Urban_and_Rural_Development_App__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Urban and Rural Development Added to Application Setup Section</description>
        <label>Urban and Rural Development</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Urban_and_Rural_Development_NOFO_Concept__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Urban and Rural Development Added to NOFO Concept Section</description>
        <label>Urban and Rural Development</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_bands_on_review_consensus__c</fullName>
        <label>Use bands on review consensus</label>
        <picklist>
            <controllingField>Use_consensus_scores__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_consensus_scores__c</fullName>
        <label>Use Consensus Scores for Review</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VISTA_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VISTA Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VISTA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VISTA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Veterans_Military_Families_AP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Application setup on NOFA.</description>
        <label>Veterans &amp; Military Families</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Veterans_Military_Families_CP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box for Concept Paper setup on NOFA.</description>
        <label>Veterans &amp; Military Families</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box on NOFA for Location Information section on NOFA &amp; Application.</description>
        <label>Volunteer Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year_10AM__c</fullName>
        <label>Year 10+</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year_10__c</fullName>
        <label>Year 10+</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year_1AM__c</fullName>
        <label>Year 1</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year_1__c</fullName>
        <label>Year 1</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year_2AM__c</fullName>
        <label>Year 2</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year_2__c</fullName>
        <label>Year 2</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <label>NOFO/RFP</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CNCS_Corporate_Program__c</columns>
        <columns>NOFA_name__c</columns>
        <columns>RFP_Name__c</columns>
        <columns>NOFA_Type__c</columns>
        <columns>Status__c</columns>
        <columns>RFP_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NOFO_s_Accepting_Applications</fullName>
        <columns>NAME</columns>
        <columns>CNCS_Corporate_Program__c</columns>
        <columns>NOFA_name__c</columns>
        <columns>NOFA_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Allow_Prime_Applicants_and_Sub_Applicant__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Finalized</value>
        </filters>
        <filters>
            <field>NOFA_Active_Inactive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NOFA__c.NOFO,NOFA__c.Finalize_Status,NOFA__c.NOFA_Intent_to_Apply</value>
        </filters>
        <label>NOFO&apos;s Accepting Applications</label>
    </listViews>
    <listViews>
        <fullName>NOFO_s_Accepting_Applications_w_CP</fullName>
        <columns>NAME</columns>
        <columns>CNCS_Corporate_Program__c</columns>
        <columns>NOFA_name__c</columns>
        <columns>NOFA_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Allow_Concept_Paper__c</columns>
        <columns>Concept_Paper_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Finalized</value>
        </filters>
        <filters>
            <field>NOFA_Active_Inactive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NOFA__c.NOFO,NOFA__c.Finalize_Status,NOFA__c.NOFA_Intent_to_Apply</value>
        </filters>
        <filters>
            <field>Allow_Concept_Paper__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>NOFO&apos;s Accepting Applications w. CP</label>
    </listViews>
    <listViews>
        <fullName>NOFO_user_NOFA</fullName>
        <filterScope>Queue</filterScope>
        <label>NOFO user</label>
        <queue>NOFO_user</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NOFOs</fullName>
        <columns>NAME</columns>
        <columns>CNCS_Corporate_Program__c</columns>
        <columns>NOFA_name__c</columns>
        <columns>NOFA_Type__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NOFA__c.NOFO</value>
        </filters>
        <label>NOFOs</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Philly_2016_Mummers1</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Allow_Prime_Applicants_and_Sub_Applicant__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Notice_of_Intent_to_Apply_Submitted__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Allow_Concept_Paper__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Performance_Measures__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Cash_Grants_Awards__c</field>
            <operation>equals</operation>
        </filters>
        <label>Philly 2016 Mummers</label>
    </listViews>
    <listViews>
        <fullName>RFP</fullName>
        <columns>NAME</columns>
        <columns>CNCS_Corporate_Program__c</columns>
        <columns>RFP_Name__c</columns>
        <columns>NOFA_Type__c</columns>
        <columns>RFP_Status__c</columns>
        <columns>Cash_Grants_Awards__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NOFA__c.RFP</value>
        </filters>
        <label>RFPs</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RFP_s_Accepting_Applications</fullName>
        <columns>NAME</columns>
        <columns>CNCS_Corporate_Program__c</columns>
        <columns>RFP_Name__c</columns>
        <columns>NOFA_Type__c</columns>
        <columns>RFP_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RFP_Status__c</field>
            <operation>equals</operation>
            <value>Open to Applicants</value>
        </filters>
        <filters>
            <field>NOFA_Active_Inactive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NOFA__c.RFP</value>
        </filters>
        <label>RFP&apos;s Accepting Applications</label>
    </listViews>
    <listViews>
        <fullName>Rashida_and_Khalid_NOFA</fullName>
        <filterScope>Queue</filterScope>
        <label>Rashida and Khalid</label>
        <queue>Rashida_and_Khalid</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>NOFO/RFP ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NOFOs/RFPs</pluralLabel>
    <recordTypes>
        <fullName>Finalize_Status</fullName>
        <active>true</active>
        <label>Finalize Status</label>
    </recordTypes>
    <recordTypes>
        <fullName>NOFA_Application</fullName>
        <active>true</active>
        <label>NOFA Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>NOFA_Concept_Paper</fullName>
        <active>true</active>
        <label>NOFA Concept Paper</label>
    </recordTypes>
    <recordTypes>
        <fullName>NOFA_Intent_to_Apply</fullName>
        <active>true</active>
        <label>NOFA - Intent to Apply</label>
    </recordTypes>
    <recordTypes>
        <fullName>NOFO</fullName>
        <active>true</active>
        <label>NOFO</label>
    </recordTypes>
    <recordTypes>
        <fullName>RFP</fullName>
        <active>true</active>
        <label>RFP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Return_for_Rework</fullName>
        <active>true</active>
        <label>Return for Rework</label>
    </recordTypes>
    <recordTypes>
        <fullName>Round</fullName>
        <active>true</active>
        <label>Round</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Address</fullName>
        <active>true</active>
        <label>Service Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>State_Commission</fullName>
        <active>true</active>
        <label>State Commission</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Allow_Applications_to_CNCS_Directly</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Allow_Prime_Applicants_and_Sub_Applicant__c , &apos;Yes&apos;),  ISPICKVAL(Allow_Applications_CNCS__c,&apos;&apos;))</errorConditionFormula>
        <errorDisplayField>Allow_Applications_CNCS__c</errorDisplayField>
        <errorMessage>Field must be entered when &quot;Allow Prime Applicants and Sub Applicant&quot; is &quot;Yes.&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Alternative_Match_Schedule</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
OR( Year_1AM__c &lt;0, Year_1AM__c &gt;1.0),
OR( Year_2AM__c &lt;0, Year_2AM__c &gt;1.0),
OR( Year_3AM__c &lt;0, Year_3AM__c &gt;1.0),
OR( Year_4AM__c &lt;0, Year_4AM__c &gt;1.0),
OR( Year_5AM__c &lt;0, Year_5AM__c &gt;1.0),
OR( Year_6AM__c &lt;0, Year_6AM__c &gt;1.0),
OR( Year_7AM__c &lt;0, Year_7AM__c &gt;1.0),
OR( Year_8AM__c &lt;0, Year_8AM__c &gt;1.0),
OR( Year_9AM__c &lt;0, Year_9AM__c &gt;1.0),
OR( Year_10AM__c &lt;0, Year_10AM__c &gt;1.0)
)</errorConditionFormula>
        <errorMessage>You can enter a value greater than or equal 0 and less than or equal to 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Application_Due_Date</fullName>
        <active>false</active>
        <errorConditionFormula>AND(Applications_due_date__c  &lt; TODAY(),  Past_Application_Due_Date__c != True)</errorConditionFormula>
        <errorMessage>Sorry, You cannot Submit the application as the due date is passed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Application_due_date_error</fullName>
        <active>true</active>
        <description>The Application Due Date must be earlier than or before the RFP End Date and earlier than or the same as the RFP Start Date. If a concept paper is required, the Application Due Date must also be on or after the Concept Paper Due Date.</description>
        <errorConditionFormula>AND( RecordType.Name =&quot;RFP&quot;, AND(Concept_Paper_Due_Date__c !=null, Applications_due_date__c &lt; Concept_Paper_Due_Date__c),AND(Applications_due_date__c &lt;= RFP_Start_Date__c, Applications_due_date__c &gt;= RFP_End_Date__c))</errorConditionFormula>
        <errorDisplayField>Applications_due_date__c</errorDisplayField>
        <errorMessage>The Application Due Date must be earlier than or before the RFP End Date and earlier than or the same as the RFP Start Date. If a concept paper is required, the Application Due Date must also be on or after the Concept Paper Due Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Award_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Award_Amount__c=true, Lower_Threshold__c &gt; Upper_Threshold__c)</errorConditionFormula>
        <errorDisplayField>Lower_Threshold__c</errorDisplayField>
        <errorMessage>Lower Threshold should be less than Upper Threshold</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Bands_on_Review_Consensus_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL(Use_consensus_scores__c,&apos;Yes&apos;) &amp;&amp; AND(NOT( $RecordType.Name = &apos;State Commission&apos;),NOT( $RecordType.Name = &apos;RFP&apos;)	
,ISPICKVAL( Use_bands_on_review_consensus__c , &apos;&apos;)|| ISPICKVAL(Use_bands_on_review_consensus__c , &apos;None&apos;)),true, false)</errorConditionFormula>
        <errorDisplayField>Use_bands_on_review_consensus__c</errorDisplayField>
        <errorMessage>Please select a picklist value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Edit_NOFAs</fullName>
        <active>false</active>
        <errorConditionFormula>Owner:User.Id &lt;&gt; $User.Id</errorConditionFormula>
        <errorMessage>Cannot EDIT this NOFA.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Comp_Sub_Applications_Rank_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Allow_Prime_Applicants_and_Sub_Applicant__c , &apos;Yes&apos;),  ISPICKVAL(Comp_Sub_Applications_Should_be_Ranked__c , &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>Comp_Sub_Applications_Should_be_Ranked__c</errorDisplayField>
        <errorMessage>Field must be entered when &quot;Allow Prime Applicants and Sub Applicant&quot; is &quot;Yes.&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Compliance_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>$RecordType.Name = &apos;NOFO&apos; &amp;&amp; Compliance_Review_Required__c  = false &amp;&amp; (Timely_Submission__c = true ||  Type_of_Organization__c = true || NOT(ISNULL(Eligible_Org_Types__c)) ||  Completeness_of_Application__c = true ||  Notice_of_Intent_to_Apply_Submitted__c = true || Organization_Characteristics__c = true || NOT(ISNULL(Eligible_Org_Characteristics__c)) ||   Award_Amount__c = true ||  Lower_Threshold__c &lt;&gt; null || Upper_Threshold__c &lt;&gt; null || At_least_80_of_funds__c = true)</errorConditionFormula>
        <errorDisplayField>Compliance_Review_Required__c</errorDisplayField>
        <errorMessage>Compliance Review fields not available when Compliance Review is Unchecked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Compliance_Required_Fields</fullName>
        <active>false</active>
        <description>Should enter fields when Compliance Review is checked</description>
        <errorConditionFormula>$RecordType.Name = &apos;NOFO&apos; &amp;&amp; Compliance_Review_Required__c = True &amp;&amp; (Timely_Submission__c = null || Type_of_Organization__c = null || ISNULL(Eligible_Org_Types__c) || Completeness_of_Application__c = null || Notice_of_Intent_to_Apply_Submitted__c = null || Organization_Characteristics__c = null || ISNULL(Eligible_Org_Characteristics__c) || Award_Amount__c = null || Lower_Threshold__c = null || Upper_Threshold__c = null || At_least_80_of_funds__c = null)</errorConditionFormula>
        <errorDisplayField>Compliance_Review_Required__c</errorDisplayField>
        <errorMessage>Compliance Review fields should be entered when Compliance Review is checked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Concep_paper_instructions_entered</fullName>
        <active>true</active>
        <description>“Concept Paper Submission Instructions” are required if “Require Concept Paper” is “Yes.”</description>
        <errorConditionFormula>AND( ISPICKVAL(Allow_Concept_Paper__c, &quot;Yes&quot;), IF( OR(Concept_Paper_Submission_Instructions__c = &apos;&apos;,Concept_Paper_Submission_Instructions__c = null), true,false) )</errorConditionFormula>
        <errorDisplayField>Concept_Paper_Submission_Instructions__c</errorDisplayField>
        <errorMessage>“Concept Paper Submission Instructions” are required if “Require Concept Paper” is “Yes.”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Concept_Paper_Due_Date</fullName>
        <active>false</active>
        <errorConditionFormula>Concept_Paper_Due_Date__c  &lt; Today()</errorConditionFormula>
        <errorMessage>Sorry, You cannot Submit the concept paper as the due date is passed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Concept_Paper_Due_Date_required</fullName>
        <active>true</active>
        <description>Concept Paper Due date is required when Allow Concept Paper is &quot;Yes&quot;. (KY)</description>
        <errorConditionFormula>AND( ISPICKVAL(Allow_Concept_Paper__c, &quot;Yes&quot;), ISBLANK( Concept_Paper_Due_Date__c ))</errorConditionFormula>
        <errorDisplayField>Concept_Paper_Due_Date__c</errorDisplayField>
        <errorMessage>Please enter Concept Paper Due Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Concept_Paper_is_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(   Allow_Concept_Paper__c   , &apos;yes&apos;), ISBLANK(   Concept_Paper_Due_Date__c   ))</errorConditionFormula>
        <errorDisplayField>Concept_Paper_Due_Date__c</errorDisplayField>
        <errorMessage>Field must be entered when &quot;Allow Concept Paper&quot; is &apos;Yes&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Concept_paper_greater_than_rfp_start</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.Name =&quot;RFP&quot;,  AND( Concept_Paper_Due_Date__c &lt;=  RFP_Start_Date__c , Concept_Paper_Due_Date__c &gt;=  Applications_due_date__c ))</errorConditionFormula>
        <errorDisplayField>Concept_Paper_Due_Date__c</errorDisplayField>
        <errorMessage>The Concept Paper Due Date must be on or after the RFP Start Date and earlier than or the same as the Application Due Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Concept_paper_submission_instructions</fullName>
        <active>true</active>
        <description>If concept paper is no then concept paper submission instructions cannot be entered</description>
        <errorConditionFormula>AND( ISPICKVAL(Allow_Concept_Paper__c, &quot;No&quot;), IF( OR(Concept_Paper_Submission_Instructions__c = &apos;&apos;,Concept_Paper_Submission_Instructions__c = null), false,true) )</errorConditionFormula>
        <errorDisplayField>Concept_Paper_Submission_Instructions__c</errorDisplayField>
        <errorMessage>“Concept Paper Submission Instructions” cannot be entered if “Require Concept Paper” is “No.”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Consensus_Scores_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT( $RecordType.Name = &apos;State Commission&apos;),NOT( $RecordType.Name = &apos;RFP&apos;),ISPICKVAL(Use_consensus_scores__c, &apos;&apos;)  ||  ISPICKVAL(Use_consensus_scores__c, &apos;None&apos;))</errorConditionFormula>
        <errorDisplayField>Use_consensus_scores__c</errorDisplayField>
        <errorMessage>Please select a picklist value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_should_be_Future</fullName>
        <active>false</active>
        <description>Duplicate Validation. Please see &quot;Application_Due_Date&quot; Rule.</description>
        <errorConditionFormula>Applications_due_date__c &lt;= TODAY()</errorConditionFormula>
        <errorDisplayField>Applications_due_date__c</errorDisplayField>
        <errorMessage>Select the Future Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Fixed_Amount_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND($RecordType.Name = &apos;NOFA&apos;, ISPICKVAL( Fixed_Amount_Nofa__c , &apos;&apos;)|| ISPICKVAL(Fixed_Amount_Nofa__c , &apos;None&apos;))</errorConditionFormula>
        <errorDisplayField>Fixed_Amount_Nofa__c</errorDisplayField>
        <errorMessage>Please select a picklist value in field fixed amount Nofa</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_concept_paper_is_no</fullName>
        <active>true</active>
        <description>If concept paper is no due date cannot be entered</description>
        <errorConditionFormula>AND( ISPICKVAL(Allow_Concept_Paper__c, &quot;No&quot;),NOT( ISBLANK(Concept_Paper_Due_Date__c)))</errorConditionFormula>
        <errorDisplayField>Concept_Paper_Due_Date__c</errorDisplayField>
        <errorMessage>A “Concept Paper Due Date” cannot be entered if “Require Concept Paper” is “No.”</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Intent_to_Apply_Due_Date</fullName>
        <active>true</active>
        <description>&apos;Notification of Intent to Apply Due Date&apos; and &apos;Notification of Intent to Apply Instructions&apos; required if &apos;Allow Notification of Intent to Apply&apos; field values = Optional, Required.</description>
        <errorConditionFormula>AND(

OR(
ISPICKVAL(Notification_of_Intent_to_Apply_Required__c , &quot;Optional&quot;),
ISPICKVAL( Notification_of_Intent_to_Apply_Required__c , &quot;Required&quot;)),

ISBLANK( Intent_to_Apply_Due_Date__c))</errorConditionFormula>
        <errorDisplayField>Intent_to_Apply_Due_Date__c</errorDisplayField>
        <errorMessage>&apos;Notification of Intent to Apply Due Date&apos; required if &apos;Allow Notification of Intent to Apply&apos; field values = Optional, Required.</errorMessage>
    </validationRules>
</CustomObject>